<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="?backgroundColor"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_space_height" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_title_localisation"
            android:textSize="@dimen/settings_police_big_title"
            android:textStyle="bold" />


        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_space_height" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Space
                android:layout_width="@dimen/settings_space_indent"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_subtitle_current_localisation"
                android:textSize="@dimen/settings_police_medium_title"/>
        </LinearLayout>


        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_space_height" />


        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

            <Space
                android:layout_width="@dimen/settings_space_indent"
                android:layout_height="match_parent" />

            <com.google.android.gms.maps.MapView
                android:id="@+id/mapview_settings"
                android:layout_width="wrap_content"
                android:layout_height="150dp" />


            <Space
                android:layout_width="@dimen/settings_space_indent"
                android:layout_height="match_parent" />
        </LinearLayout>


        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_space_height" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Space
                android:layout_width="@dimen/settings_space_indent"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/button_settings_sethome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_button_set_home"
                android:textAllCaps="false"
                android:layout_weight="1" />

            <Space
                android:layout_width="@dimen/settings_space_indent"
                android:layout_height="match_parent" />
        </LinearLayout>


        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_space_height" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Space
                    android:layout_width="@dimen/settings_space_indent"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/textview_settings_radius"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/settings_seekbar_radius"
                    android:textSize="@dimen/settings_police_medium_title" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_weight="1" />

            <SeekBar
                android:id="@+id/seekbar_settings_radius"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max= "300000"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Space
                    android:layout_width="@dimen/settings_space_indent"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/textview_settings_currentradius"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            </LinearLayout>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_space_height" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Space
                android:layout_width="@dimen/settings_space_indent"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/general_showlocation"
                android:textSize="@dimen/settings_police_medium_title" />

            <Switch
                android:id="@+id/switch_settings_showmylocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Space
                android:layout_width="@dimen/settings_space_indent"
                android:layout_height="match_parent" />

        </LinearLayout>


       <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_space_height" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_title_screen"
            android:textSize="@dimen/settings_police_big_title"
            android:textStyle="bold" />


        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_space_height" />


        <android.support.constraint.ConstraintLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/settings_switch_darkmode"
                android:textSize="@dimen/settings_police_medium_title"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/switch_settings_darkmode"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Switch
                android:id="@+id/switch_settings_darkmode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>


        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_space_height"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_settings_invite_friend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/settings_invite_friend_button"
                android:textColor="@android:color/white" />

        </LinearLayout>


        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_space_height" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_settings_deleteaccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/holo_red_dark"
                android:text="@string/settings_deletemyaccount"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_space_height" />

    </LinearLayout>

</ScrollView>