...
    <string name="settings_subtitle_current_localisation">Current home position</string>
    <string name="settings_button_set_home">Set your home to your current position</string>

    <string name="settings_switch_darkmode">Dark mode</string>

    <string name="settings_seekbar_radius">Visibility radius of other users\' posts</string>
    <string name="settings_seekbar_currentradius">Current radius : </string>
    <string name="settings_seekbar_toast_end">Radius changed to : </string>

    <string name="settings_invite_friend_button">Invite a friend</string>
    <string name="settings_invite_friend_subject">Your friend invite you to join Socialize !</string>
    <string name="settings_invite_friend_body">Come to Socialize</string>
    <string name="settings_invite_friend_client_chooser">Choose a client : </string>
...
